# RayRay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  a.exp  img_dielectric.ppm  img_final.ppm  img_hollow.ppm  img_motion_blur.ppm  img_quad.ppm  img_test.ppm  img_tor.ppm  img_true_lambertian_reflection.ppm  img_view.ppm  test.cu  vcpkg.json
results/: img_bvh.ppm  img_bvh_l.ppm  img_diffuse.ppm  img_earth_tex.ppm  img_focus_left.ppm  img_gamma_correction.ppm  img_glb_pistol.ppm  img_glb_pistol_1.ppm  img_gltf_cube.ppm  img_gltf_tri.ppm  img_schlick.ppm  img_textures.ppm  img_traingle.ppm  img_vfov.ppm  img_view.ppm  tex.ppm
src/: gltf_utils.cpp  image_utils.cpp  main.cpp  print_ppm.cpp
src/headers/: aabb.h  bvh.h  camera.h  color.h  gltf_utils.h  hittable.h  hittable_list.h  image_utils.h  interval.h  material.h  myutils.h  ray.h  sphere.h  texture.h  triangle.h  vec3.h
